--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 By Adeoye Banjo
 
 Canadian Graduate Statistics
-    Program uses a data file to compute and display different
+    CMD Program uses a data file to compute and display different
     reports made from data records
 
 Files:
